# slim-pta-validator

./: CMakeLists.txt  PtaValidator.cpp  README.md  instrumenter.py  runtime.c  validate.sh
slim/: CMakeLists.txt  main.cpp
src/: ll_to_slim.cpp
testcases/: README.md  array_of_ptrs_to_structs.c  array_of_ptrs_to_structs.pta  array_of_structs_fields.c  array_of_structs_fields.pta  branching_deref.c  double_pointer_corner.c  double_pointer_corner.pta  fs_empty_set_unsound.c  fs_empty_set_unsound.pta  fs_last_entry_wins.c  fs_last_entry_wins.pta  fs_missing_fact_unsound.c  fs_missing_fact_unsound.pta  fs_replace_semantics.c  fs_replace_semantics.pta  fs_source_line.pta  fs_struct_array.c  fs_struct_array.pta  func_ptr_arrays_and_struct_fields.c  func_ptr_arrays_and_struct_fields.pta  loop_phi_corner.c  my_test.c  my_test.pta  simple_assignment.c  struct_multi_fields.c  struct_multi_fields.pta  uninitialized_ptr_deref.c
testcases/good/: README.md  function_pointer_arg.c  function_pointer_arg.pta  simple_assignment.pta
util/: compile.sh
